# Betriebssysteme-und-Verteilte-Systeme-Projekte

./: CMakeLists.txt  README.md  keyValStore.c  keyValStore.h  main.c  main.h  sub.c  sub.h
Instructions/: Instructions.md
